package composition;

public class Main {

    public static void main(String[] args){
        Game game = new Game();
      //  game .startGame();


        Player p = new Player("M", 10);
        System.out.println(p);
        p.setScore(12);
        System.out.println(p);


    }

}
